--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My team page</title>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <header>
+        <div class="header-left">The creative crew</div>
+        <div class="header-right">
+          <p>WHO WE ARE</p>
+          <p>
+            We are team of creatively diverse. driven. innovative individuals
+            working in various locations from the world.
+          </p>
+        </div>
+      </header>
+    </main>
+  </body>
 </html>
