--- a/index.html
+++ b/index.html
@@ -13,12 +13,30 @@
         <div class="header-left">The creative crew</div>
         <div class="header-right">
           <p>WHO WE ARE</p>
-          <p>
+          <p class="header-paragraph">
             We are team of creatively diverse. driven. innovative individuals
             working in various locations from the world.
           </p>
         </div>
       </header>
+
+      <section class="photo-top">
+        <div><img src="./assets/photo1.png" alt="photo 1" />Bill Mahoney</div>
+        <div class="photo-2">
+          <img src="./assets/photo2.png" alt="photo 2" />Saba Cabrera
+        </div>
+        <div><img src="./assets/photo3.png" alt="photo 3" />Shae Le</div>
+      </section>
+
+      <section class="photo-bottom">
+        <div><img src="./assets/photo4.png" alt="photo 4" />Skylah Lu</div>
+        <div class="photo-5">
+          <img src="./assets/photo5.png" alt="photo 5" />Griff Richards
+        </div>
+        <div><img src="./assets/photo6.png" alt="photo 6" />Stan John</div>
+      </section>
+
+      <footer>created by Muhammad Iqbal - devChallenges.io</footer>
     </main>
   </body>
 </html>
