--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
       </section>
 
       <section class="photo-bottom">
-        <div><img src="./assets/photo4.png" alt="photo 4" />Skylah Lu</div>
+        <div class="photo-4">
+          <img src="./assets/photo4.png" alt="photo 4" />Skylah Lu
+        </div>
         <div class="photo-5">
           <img src="./assets/photo5.png" alt="photo 5" />Griff Richards
         </div>
-        <div><img src="./assets/photo6.png" alt="photo 6" />Stan John</div>
+        <div class="photo-6">
+          <img src="./assets/photo6.png" alt="photo 6" />Stan John
+        </div>
       </section>
 
       <footer>created by Muhammad Iqbal - devChallenges.io</footer>
